minigames should now attach to the minigame entity; more framework updates

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':app', ':andenginephysicsbox2dextension', ':andEngineMultiplayerExtension'
-include ':andEngine'
+include ':andEngineMultiplayerExtension', ':andEngine', 'app', 'andEnginePhysicsBox2DExtension'
