--- a/andEngineMultiplayerExtension/src/main/AndroidManifest.xml
+++ b/andEngineMultiplayerExtension/src/main/AndroidManifest.xml
@@ -5,4 +5,5 @@
         android:versionName="1.0">
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 </manifest> 
